# wsdm-kkbox-music-kg

./: .gitignore  README.md  create_songs_subset_train.py  create_wsdm-kkbox-music-kg.sh  genre_artist_stats.py  pyproject.toml  weave.py
config/: biocypher_config.yaml  schema_config.yaml
wsdm-kkbox-music-kg/adapters/: members.yaml  songs.yaml  train.yaml
