[tool.poetry]
name = "wsdm-kkbox-music-kg"
version = "0.0.1"
description = "Knoweldge Graph for WSDM - KKBox's Music Recommendation Challenge Knowledge"
authors = ["Emanuele Quaglio <emanuele.quaglio@pasteur.fr>", "Matthieu Najm <matthieu.najm@pasteur.fr>", ]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ontoweaver = "^0.2.4"
pandas = "^2.0.1"
notebook = "^7.4.3"
biocypher = "^0.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx_rtd_theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"